<?xml version="1.0"?>
<package format="3">
  <name>wifi_scanner</name>
  <version>0.0.1</version>
  <description>Publish WiFi scan info (nmcli) for ROS2 bag logging</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>